# prettysql

./: .bumpversion.cfg  .coveragerc  .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
doc_source/: Home.rst  conf.py
src/edo/: __init__.py
src/edo/prettysql/: __init__.py  prettysql.py
src/edo/prettysql/queries/: out.sql  query.sql
src/prettysql/: __init__.py  prettysql.py
src/prettysql/queries/: out.sql  query.sql
