[aliases]
test = pytest

[metadata]
name = prettysql
version = 0.0.1
author = eDreams ODIGEO
author_email = ds-mkt@edreamsodigeo.com
license = COPYRIGHT
description = prettysql
keywords = prettysql
url = http://bitbucket.org/odigeoteam/edo-ds-mkt-lib-prettysql
long_description = file: README.md
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9


[options]
package_dir =
    = src
install_requires = file: requirements.txt
include_package_data = True
namespace_packages = edo
;scripts = scripts/setuptools.sh

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    prettysql=edo.prettysql.prettysql:main


